# prior-authorization-demo

./: .gitignore  MULTI_DOC_DEMO_README.md  README.md  debug_gemini_api.py  demo.py  enhanced_demo.py  enhanced_multi_doc_demo.py  main.py  multi_doc_demo.py  pyproject.toml  test_schema_fix.py  validate_enhanced_demo.py  visualize_tree.py
docs/: core-authorization-api.md  utilities-helpers-api.md  visualization-demo-api.md
examples/: cardioguard_criteria.txt  dupixent_clinical_guidelines.txt  dupixent_insurance_policy.txt  humira_criteria.txt  jardiance_criteria.txt  ozempic_criteria.txt  repatha_criteria.txt  test_config.py
outputs/decision_trees/: cardioguard_criteria_decision_tree.json  jardiance_criteria_decision_tree.json  ozempic_criteria_decision_tree.json
outputs/reports/: demo_session_20250626_174033.json  demo_session_20250626_174047.json  demo_session_20250626_175622.json  demo_session_20250626_175902.json  demo_session_20250626_183801.json  demo_session_20250626_183912.json  demo_session_20250626_194431.json
outputs/visualizations/: cardioguard_criteria_decision_tree.dot  jardiance_criteria_decision_tree.dot  ozempic_criteria_decision_tree.dot
src/adapters/: __init__.py  multi_document_adapter.py
src/agents/: conflict_resolver.py  criteria_parser_agent.py  refinement_agent.py  tree_structure_agent.py  validation_agent.py
src/core/: config.py  criteria_parser.py  (+5 more)
tests/: conftest.py  debug_demo_flow.py  debug_schema_issue.py  debug_tree_structure.py  test_enhanced_demo.py  test_llm_client.py  test_tree_display.py  test_tree_structure_agent.py
(+25 files in other folders)
